multi-api-versions/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testingapi
spec:
  selector:
    app: testingapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
