multi-api-versions/k8/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testingapi
spec:
  hosts:
  - "*"
  gateways:
  - testingapi-gateway
  http:
  # enable for a fun time :)
  # - fault:
  #     abort:
  #       httpStatus: 500
  #       percentage:
  #         value: 20
  - match:
    - headers:
        accept-version:
          exact: "2"
    route:
    - destination:
        host: testingapi
        subset: v2
        port:
          number: 80
  - match:
    - headers:
        accept-version:
          exact: "1"
    route:
    - destination:
        host: testingapi
        subset: v1
        port:
          number: 80
